# simple_logger_rs

./: .gitignore  Cargo.toml  README.md  other_log.txt
src/: lib.rs
src/logging/: log_date.rs  log_entry.rs  log_level.rs  log_message.rs  logger.rs
